# code-snippets

./: beatifulsoup.ipynb  diff-match-patch-test.ipynb  diff.py  display.md  display2.md  import_test.py  phrase.txt  pymongo.ipynb  read_excel_experiments.ipynb  sentence_separation.ipynb  title_text_concat.ipynb  warmup_api_test.ipynb
fastapi/: pyproject.toml  router.py
fastapi/tests/: test_app_router.py
quotes_samples/: bullet_estate.json  bullet_paternity.json  bullet_rag.json  paragraph_metaverse.json  quotes_movie.json  table_movie.json  table_recipe.json
